Labatt POCM Deployment to UAT 09.16.2016/objects/Marketing_Program__c.object
<CustomObject>
    <description>This custom object is used to create Trade Activation Programs (Slalom Aug 2016)</description>
    <fields>
        <fullName>Brand__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Brand</label>
        <referenceTo>Brand__c</referenceTo>
        <relationshipName>Marketing_Programs</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Program_End_Date__c</fullName>
        <label>Program End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Program_Start_Date__c</fullName>
        <label>Program Start Date</label>
        <type>Date</type>
    </fields>
    <label>Toolkit</label>
    <listViews>
        <fullName>All_2016_Summer_Programs</fullName>
        <columns>NAME</columns>
        <columns>Brand__c</columns>
        <columns>Program_Start_Date__c</columns>
        <columns>Program_End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Program_Start_Date__c</field>
            <operation>greaterThan</operation>
            <value>6/1/2016</value>
        </filters>
        <filters>
            <field>Program_End_Date__c</field>
            <operation>lessThan</operation>
            <value>9/30/2016</value>
        </filters>
        <label>All 2016 Summer Programs</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_2017_Marketing_Programs</fullName>
        <columns>NAME</columns>
        <columns>Brand__c</columns>
        <columns>Program_Start_Date__c</columns>
        <columns>Program_End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Program_Start_Date__c</field>
            <operation>greaterThan</operation>
            <value>1/1/2017</value>
        </filters>
        <filters>
            <field>Program_End_Date__c</field>
            <operation>lessThan</operation>
            <value>12/31/2017</value>
        </filters>
        <label>All 2017 Marketing Programs</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Corona_Programs</fullName>
        <columns>NAME</columns>
        <columns>Brand__c</columns>
        <columns>Program_Start_Date__c</columns>
        <columns>Program_End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Brand__c</field>
            <operation>equals</operation>
            <value>Corona</value>
        </filters>
        <label>All Corona Programs</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Marketing_Programs</fullName>
        <columns>NAME</columns>
        <columns>Brand__c</columns>
        <columns>Program_Start_Date__c</columns>
        <columns>Program_End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Marketing Programs</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Toolkit Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Toolkits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>